--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,28 @@
 asgiref==3.3.1
+braintree==4.6.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.6
 Django==3.1.7
+django-fsm==2.7.1
+django-model-utils==4.1.1
+django-paypal==1.0.0
 django-qr-code==2.1.0
+idna==2.10
+pendulum==2.1.2
+pycparser==2.20
+PyJWT==2.0.1
+python-dateutil==2.8.1
 pytz==2021.1
+pytzdata==2020.1
+requests==2.25.1
 segno==1.3.1
+six==1.15.0
 sqlparse==0.4.1
+stripe==2.56.0
+suds-jurko==0.6
+swapper==1.1.2.post1
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+xmltodict==0.12.0
